<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:clickable="true"
    android:padding="20dp"
    android:focusableInTouchMode="true"
    android:layout_gravity="center_horizontal"

    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtUser"
        android:text="@string/patOrDoc"
        android:textColor="@color/red"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:clickable="true"
            android:textSize="18sp"
            android:layout_weight="0.9"
            android:id="@+id/forgotPwd"
            android:onClick="doctorLogin"
            android:textColor="@color/blue"
            android:layout_marginTop="15dp"
            android:text="@string/no"/>

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="0.1"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/yes"
            android:onClick="patientLogin"
            android:textColor="@color/blue"

            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>